--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -76,3 +76,9 @@ details>summary {
   border-left: solid 5px #F1DE67;
   background-color: #F1DE6750;
 }
+
+
+
+.reveal pre code {
+  width: 1000px;
+}
