--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -5,12 +5,11 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 
-
 $font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
 $font-family-monospace: "Source Code Pro", monospace;
 $presentation-heading-color: #866fa3; /* Pantone Midnight - Fall 2022 */
-$link-color: #866fa3;
-$code-color: #866fa3;
+/* $link-color: #866fa3; */
+/* $code-color: #866fa3; */
 $code-block-font-size: 0.7em;
 $presentation-h2-font-size: 1.4em !default;
 $presentation-font-size-root: 36px !default;
@@ -77,8 +76,6 @@ details>summary {
   background-color: #F1DE6750;
 }
 
-
-
 .reveal pre code {
-  width: 1000px;
+  width: 1200px;
 }
