--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -8,7 +8,7 @@
 $font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
 $font-family-monospace: "Source Code Pro", monospace;
 $presentation-heading-color: #866fa3; /* Pantone Midnight - Fall 2022 */
-/* $link-color: #866fa3; */
+$link-color: #866fa3;
 /* $code-color: #866fa3; */
 $code-block-font-size: 0.7em;
 $presentation-h2-font-size: 1.4em !default;
@@ -78,4 +78,13 @@ details>summary {
 
 .reveal pre code {
   width: 1200px;
+}
+
+.reveal .quarto-title-block .quarto-title-authors .quarto-title-author {
+    background-color: white;
+}
+
+.reveal .footer a {
+    color: #866fa3;
+    background-color: white;
 }
