--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -9,7 +9,7 @@ $font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
 $font-family-monospace: "Source Code Pro", monospace;
 $presentation-heading-color: #866fa3; /* Pantone Midnight - Fall 2022 */
 $link-color: #866fa3;
-/* $code-color: #866fa3; */
+$code-color: #866fa3;
 $code-block-font-size: 0.7em;
 $presentation-h2-font-size: 1.4em !default;
 $presentation-font-size-root: 36px !default;
